Fix overflow of debug menu

--- a/app/styles/_debug-ui.scss
+++ b/app/styles/_debug-ui.scss
@@ -1,4 +1,5 @@
 .debug-ui {
+    width: 100%;
     color: #ccc;
     overflow-wrap: break-word;
 
