--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -117,6 +117,7 @@ $leftMenuBorderColor: #333;
 		display: flex;
 		flex-flow: column;
 		flex: 1 100%;
+		width: 100%;
 	}
 
 	.nav-tabs {
